Update GitHub username and token in config
Updated GitHub configuration with new username and token.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 <script>
     // ================= 配置区 (请修改这里！) =================
     const GITHUB_CONFIG = {
-        username: "你的GitHub用户名",     // 例如: "Nolan"
+        username: "Nolan180940",     // 例如: "Nolan"
         repo: "my-drive-data",          // 你创建的用于存文件的Public仓库名
-        token: "你的ghp_开头的Token",    // Personal Access Token (权限选 repo)
+        token: "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",    // Personal Access Token (权限选 repo)
         branch: "main"                  // 分支名
     };
     
