Update GitHub username in configuration

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <script>
     // ================= 配置区 =================
     const GITHUB_CONFIG = {
-        username: "你的GitHub用户名",     
+        username: "Nolan180940",     
         repo: "my-drive-data",          
         branch: "main"
     };
